--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,161 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <RelativeLayout
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/first_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="24dp"
-            android:text="@string/signup_firstname"/>
-
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/fn_editor"
-            android:layout_width="128dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="32dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/signup_firstname"
+            android:inputType="textPersonName"
             android:maxLines="1"
             android:singleLine="true"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/first_name" />
-    </RelativeLayout>
+            android:fontFamily="sans-serif" />
 
-    <RelativeLayout
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/last_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="24dp"
-            android:text="@string/signup_lastname"/>
-
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/ln_editor"
-            android:layout_width="128dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="32dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/signup_lastname"
+            android:inputType="textPersonName"
             android:maxLines="1"
             android:singleLine="true"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/last_name" />
-    </RelativeLayout>
+            android:fontFamily="sans-serif" />
 
-    <RelativeLayout
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/email_signup_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="74dp"
-            android:text="@string/signup_email"/>
-
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/email_editor"
-            android:layout_width="128dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/signup_email"
+            android:inputType="textEmailAddress"
             android:maxLines="1"
             android:singleLine="true"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/email_signup_text" />
-    </RelativeLayout>
+            android:fontFamily="sans-serif" />
 
-    <RelativeLayout
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/password_signup_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="46dp"
-            android:text="@string/signup_password"/>
-
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/password_editor"
-            android:layout_width="128dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="18dp"
-            android:imeOptions="actionUnspecified"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/signup_password"
             android:inputType="textPassword"
             android:maxLines="1"
             android:singleLine="true"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/password_signup_text"/>
-    </RelativeLayout>
+            android:fontFamily="sans-serif" />
 
-    <RelativeLayout
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/retype_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="0dp"
-            android:text="@string/signup_retype_password"/>
-
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/retype_password_editor"
-            android:imeOptions="actionUnspecified"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/signup_retype_password"
             android:inputType="textPassword"
             android:maxLines="1"
             android:singleLine="true"
-            android:layout_width="128dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="24dp"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/retype_password"/>
-    </RelativeLayout>
+            android:fontFamily="sans-serif" />
 
-    <RelativeLayout
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/campus_signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="46dp"
-            android:text="@string/campus_name"/>
 
         <EditText
             android:id="@+id/campus_editor"
-            android:layout_width="128dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="28dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/signup_campus"
+            android:imeActionLabel="@string/action_signUp"
+            android:imeOptions="actionUnspecified"
+            android:inputType="text"
             android:maxLines="1"
             android:singleLine="true"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/campus_signup"/>
-    </RelativeLayout>
+            android:fontFamily="sans-serif" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/signUp_button"
-        android:layout_width="256dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:layout_gravity="center"
         android:text="@string/register"/>
 
